--- a/cs5610project2/src/board.css
+++ b/cs5610project2/src/board.css
@@ -4,3 +4,9 @@
     grid-template-rows: repeat(10,40px);
     grid-column-gap: 10px;
 }
+#enemy{
+    display: grid;
+    grid-template-columns: repeat(10,40px);
+    grid-template-rows: repeat(10,40px);
+    grid-column-gap: 10px;
+}
