--- a/cs5610project2/src/SingleBoard.css
+++ b/cs5610project2/src/SingleBoard.css
@@ -1,6 +1,9 @@
 #singleBoard{
     height: 30px;
     width: 30px;
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
 }
 .blue{
     background-color: lightblue;
@@ -23,4 +26,12 @@
     /* 要换成中间有个check，我不太会 */
     background-color: green;
     border: 1px solid gray;
+}
+
+.dot {
+    height: 25px;
+    width: 25px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
 }
