--- a/cs5610project2/src/board.css
+++ b/cs5610project2/src/board.css
@@ -1,3 +1,23 @@
+.flexbox-container {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flexbox-container2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.flexbox-container3 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 150px;
+}
+
 #battleShipBlock{
     display: grid;
     grid-template-columns: repeat(10,40px);
