--- a/cs5610project2/src/board.css
+++ b/cs5610project2/src/board.css
@@ -1,7 +1,33 @@
+
+body {
+    background: linear-gradient(270deg, #f2f0ec, #f5f5f5, #d8e8e2);
+    background-size: 600% 600%;
+
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
 .flexbox-container {
     height: 100%;
-    padding: 0;
     margin: 0;
+    padding: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,6 +39,7 @@
 }
 
 .flexbox-container3 {
+    padding-top: 70px;
     display: flex;
     flex-direction: column;
     padding-left: 150px;
