--- a/cs5610project2/src/SingleBoard.css
+++ b/cs5610project2/src/SingleBoard.css
@@ -21,6 +21,7 @@
     justify-content: center; /* align horizontal */
     align-items: center; /* align vertical */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+    border-radius: 20%;
 }
 
 .blue{
