--- a/cs5610project2/src/board.css
+++ b/cs5610project2/src/board.css
@@ -57,3 +57,22 @@ body {
     grid-template-rows: repeat(10,40px);
     grid-column-gap: 10px;
 }
+#button{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  
+}
+.resetButton{
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
